--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>您的姓名 - 個人介紹</title>
+    <title>[請填寫你的名字] - 個人網站</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="logo">[你的名字]</a>
+            <ul class="nav-links">
+                <li><a href="#about">關於我</a></li>
+                <li><a href="#projects">專案</a></li>
+                <li><a href="#contact">聯絡</a></li>
+                <li><button id="theme-toggle" class="theme-toggle-btn">月光模式</button></li>
+            </ul>
+        </div>
+    </nav>
+
     <header class="hero-section">
-        <div class="hero-content">
-            <h1>您的姓名</h1>
-            <p>您的職稱或簡短標語</p>
-            <div class="social-links">
-                <a href="#" target="_blank">LinkedIn</a>
-                <a href="#" target="_blank">GitHub</a>
-                <a href="#" target="_blank">作品集</a>
-            </div>
+        <div class="container">
+            <h1>[請填寫你的名字]</h1>
+            <p>[請填寫你的學校與科系]</p>
         </div>
     </header>
 
@@ -24,77 +32,53 @@
         <section id="about" class="section">
             <div class="container">
                 <h2>關於我</h2>
-                <div class="about-content">
-                    <img src="https://via.placeholder.com/150" alt="您的照片" class="profile-photo">
-                    <p>
-                        在這裡寫下您的個人簡介，例如您的專業領域、熱情所在、職業目標等。
-                        請盡量具體且吸引人，讓訪客對您留下深刻印象。
-                        您可以談論您的技能、經驗、以及您在專案中扮演的角色。
-                    </p>
+                <p>
+                    這裡是一段關於我的自我介紹。
+                    您可以描述您的興趣、專長、學習經歷或職業抱負。
+                    例如：我是一位熱愛前端開發的學生/開發者，專注於使用現代技術構建優雅且實用的網頁應用程式。
+                    我對學習新技術充滿熱情，並樂於接受挑戰，將創意轉化為實際的解決方案。
+                </p>
+            </div>
+        </section>
+
+        <section id="projects" class="section">
+            <div class="container">
+                <h2>專案</h2>
+                <div class="project-grid">
+                    <article class="project-card">
+                        <h3>專案一：響應式網站</h3>
+                        <p>這是一個使用 HTML5 和 CSS3 構建的響應式網頁，展示了如何在不同設備上提供最佳的用戶體驗。</p>
+                        <!-- <a href="#" target="_blank" class="btn">查看專案</a> -->
+                    </article>
+                    <article class="project-card">
+                        <h3>專案二：互動式應用</h3>
+                        <p>一個利用 JavaScript 實現動態效果和用戶互動的小型應用，例如計算器或待辦事項清單。</p>
+                        <!-- <a href="#" target="_blank" class="btn">查看專案</a> -->
+                    </article>
+                    <!-- 您可以根據需要添加更多專案卡片 -->
                 </div>
             </div>
         </section>
 
-        <section id="skills" class="section bg-light">
+        <section id="contact" class="section">
             <div class="container">
-                <h2>我的技能</h2>
-                <div class="skills-grid">
-                    <div class="skill-item">HTML5</div>
-                    <div class="skill-item">CSS3</div>
-                    <div class="skill-item">JavaScript</div>
-                    <div class="skill-item">React.js</div>
-                    <div class="skill-item">Vue.js</div>
-                    <div class="skill-item">Node.js</div>
-                    <div class="skill-item">Git</div>
-                    <div class="skill-item">Responsive Design</div>
-                </div>
-            </div>
-        </section>
-
-        <section id="portfolio" class="section">
-            <div class="container">
-                <h2>我的作品集</h2>
-                <div class="portfolio-grid">
-                    <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/300x200" alt="作品1">
-                        <h3>專案名稱 1</h3>
-                        <p>簡短描述這個專案，使用的技術和您的貢獻。</p>
-                        <a href="#" target="_blank" class="btn-small">查看專案</a>
-                    </div>
-                    <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/300x200" alt="作品2">
-                        <h3>專案名稱 2</h3>
-                        <p>簡短描述這個專案，使用的技術和您的貢獻。</p>
-                        <a href="#" target="_blank" class="btn-small">查看專案</a>
-                    </div>
-                    <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/300x200" alt="作品3">
-                        <h3>專案名稱 3</h3>
-                        <p>簡短描述這個專案，使用的技術和您的貢獻。</p>
-                        <a href="#" target="_blank" class="btn-small">查看專案</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="section bg-light">
-            <div class="container">
-                <h2>聯絡我</h2>
-                <p>有任何專案合作或職位機會，歡迎隨時與我聯繫！</p>
-                <form class="contact-form">
-                    <input type="text" placeholder="您的姓名" required>
-                    <input type="email" placeholder="您的電子郵件" required>
-                    <textarea placeholder="您的訊息" rows="5" required></textarea>
-                    <button type="submit" class="btn">送出訊息</button>
-                </form>
+                <h2>聯絡方式</h2>
+                <p>如果您有任何問題或合作機會，歡迎隨時與我聯繫！</p>
+                <a href="mailto:[請填寫你的Email]" class="btn">寄送 Email</a>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <p>&copy; 2023 您的姓名. All rights reserved.</p>
+            <div class="social-links">
+                <a href="#" target="_blank">GitHub</a>
+                <a href="#" target="_blank">LinkedIn</a>
+            </div>
+            <p>&copy; 2025 [請填寫你的名字]. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
