--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[請填寫你的名字] - 個人網站</title>
+    <title>方文政 - 個人網站</title>
     <link rel="stylesheet" href="style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">[你的名字]</a>
+            <a href="#" class="logo">方文政</a>
             <ul class="nav-links">
                 <li><a href="#about">關於我</a></li>
                 <li><a href="#projects">專案</a></li>
