--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <header class="hero-section">
         <div class="container">
-            <h1>[請填寫你的名字]</h1>
-            <p>[請填寫你的學校與科系]</p>
+            <h1>方文政</h1>
+            <p>台北科大 資訊工程</p>
         </div>
     </header>
 
