--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#about">關於我</a></li>
                 <li><a href="#projects">專案</a></li>
                 <li><a href="#contact">聯絡</a></li>
-                <li><button id="theme-toggle" class="theme-toggle-btn">月光模式</button></li>
+                <li><button id="theme-toggle" class="theme-toggle-btn">深色模式</button></li>
             </ul>
         </div>
     </nav>
