--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons (太陽/月亮) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
@@ -23,8 +25,12 @@
 
     <header class="hero-section">
         <div class="container">
+            <div class="sky-object" id="sky-object">
+                <!-- 初始為太陽，深色模式切換為月亮 -->
+                <i class="fas fa-sun"></i> 
+            </div>
             <h1>方文政</h1>
-            <p>台北科大 資訊工程</p>
+            <p>台北科大　資訊工程</p>
         </div>
     </header>
 
@@ -75,7 +81,7 @@
                 <a href="#" target="_blank">GitHub</a>
                 <a href="#" target="_blank">LinkedIn</a>
             </div>
-            <p>&copy; 2025 [請填寫你的名字]. All rights reserved.</p>
+            <p>&copy; 2025 方文政. All rights reserved.</p>
         </div>
     </footer>
 
