--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="container">
                 <h2>聯絡方式</h2>
                 <p>如果您有任何問題或合作機會，歡迎隨時與我聯繫！</p>
-                <a href="mailto:[請填寫你的Email]" class="btn">寄送 Email</a>
+                <a href="mailto:vivian2369711@gmail.com" class="btn">寄送 Email</a>
             </div>
         </section>
     </main>
