--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="container">
                 <h2>聯絡方式</h2>
                 <p>如果您有任何問題或合作機會，歡迎隨時與我聯繫！</p>
-                <a href="mailto:vivian2369711@gmail.com" class="btn">寄送 Email</a>
+                <a href="mailto:vivian2369711@gmail.com?subject=合作詢問&body=您好，%0A%0A我想請問有關合作的事宜。%0A%0A謝謝！" class="btn">寄送 Email</a>
             </div>
         </section>
     </main>
