--- a/index.html
+++ b/index.html
@@ -67,12 +67,40 @@
         </section>
 
         <section id="contact" class="section">
-            <div class="container">
-                <h2>聯絡方式</h2>
-                <p>如果您有任何問題或合作機會，歡迎隨時與我聯繫！</p>
-                <a href="mailto:vivian2369711@gmail.com?subject=合作詢問&body=您好，%0A%0A我想請問有關合作的事宜。%0A%0A謝謝！" class="btn">寄送 Email</a>
-            </div>
-        </section>
+    <div class="container">
+        <h2>聯絡方式</h2>
+        <p>如果您有任何問題或合作機會，歡迎透過以下方式與我聯繫！</p>
+        
+        <div class="contact-grid">
+            <!-- 聯絡卡片 1: Email -->
+            <a href="mailto:vivian2369711@gmail.com?subject=合作詢問&body=您好，%0A%0A我想請問有關合作的事宜。%0A%0A謝謝！" class="contact-card">
+                <i class="fas fa-envelope"></i>
+                <div class="contact-text">
+                    <h4>電子郵件</h4>
+                    <span>vivian2369711@gmail.com</span>
+                </div>
+            </a>
+
+            <!-- 聯絡卡片 2: Discord -->
+            <a href="#" target="_blank" class="contact-card">
+                <i class="fab fa-discord"></i>
+                <div class="contact-text">
+                    <h4>Discord</h4>
+                    <span>請填寫您的 Discord ID</span>
+                </div>
+            </a>
+
+            <!-- 聯絡卡片 3: GitHub -->
+            <a href="#" target="_blank" class="contact-card">
+                <i class="fab fa-github"></i>
+                <div class="contact-text">
+                    <h4>GitHub</h4>
+                    <span>查看我的程式碼</span>
+                </div>
+            </a>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer class="footer">
