--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <i class="fab fa-discord"></i>
                 <div class="contact-text">
                     <h4>Discord</h4>
-                    <span>請填寫您的 Discord ID</span>
+                    <span>iamcbro</span>
                 </div>
             </a>
 
