--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </a>
 
             <!-- 聯絡卡片 2: Discord -->
-            <a href="#" target="_blank" class="contact-card">
+            <a href="https://discord.com/users/iamcbro" target="_blank" class="contact-card">
                 <i class="fab fa-discord"></i>
                 <div class="contact-text">
                     <h4>Discord</h4>
@@ -91,7 +91,7 @@
             </a>
 
             <!-- 聯絡卡片 3: GitHub -->
-            <a href="#" target="_blank" class="contact-card">
+            <a href="https://github.com/Carbonbro" target="_blank" class="contact-card">
                 <i class="fab fa-github"></i>
                 <div class="contact-text">
                     <h4>GitHub</h4>
