--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <i class="fab fa-github"></i>
                 <div class="contact-text">
                     <h4>GitHub</h4>
-                    <span>查看我的程式碼</span>
+                    <span>查看我的主頁</span>
                 </div>
             </a>
         </div>
